--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^9.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "express-validator": "^7.2.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.6.3"
