--- a/package.json
+++ b/package.json
@@ -14,16 +14,28 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
     "@types/node": "^22.9.0",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "bcrypt": "^5.1.1",
     "concurrently": "^9.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
+    "mongoose": "^8.8.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/passport": "^1.0.17",
+    "@types/passport-local": "^1.0.38",
     "nodemon": "^3.1.7"
   }
 }
