--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/node": "^22.9.0",
+    "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^5.1.1",
     "concurrently": "^9.1.0",
@@ -26,6 +27,7 @@
     "express-validator": "^7.2.0",
     "mongoose": "^8.8.3",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "rimraf": "^6.0.1",
